crates/pcb-zen/tests/snapshots/input__snapshot_missing_required_inputs_should_error.snap
---
source: crates/pcb-zen/tests/input.rs
assertion_line: 68
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
  )
)
Error: Input 'pwr' is required but was not provided
   ╭─[ [TEMP_DIR]my_sub.zen:3:7 ]
   │
 3 │ pwr = io("pwr", Net)
   │       ───────┬──────  
   │              ╰──────── Input 'pwr' is required but was not provided
   │
   ├─[ [TEMP_DIR]top.zen:4:1 ]
   │
 4 │ ╭─▶ Sub(
   ┆ ┆   
 7 │ ├─▶ )
   │ │       
   │ ╰─────── Error instantiating `my_sub`
───╯
